[metadata]
name = cipherkit
version = 0.0.0
author = Jorge Martínez
author_email = ingenierodeaviones@gmail.com
license = MIT License
description = A Python package holding classical ciphers and different cryptanalysis tools
long_description = file: README.md
keywords =
	cryptography
	stegranography
	ciphers
	cryptanalysis
	steganalysis
url = https://github.com/jorgepiloto/cipherkit
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
package_dir =
	= src
packages = find:
zip_false = False
include_package_data = True
python_requires = >=3.5
install_requires =
	numpy
	sphinx

[options.packages.find]
where = src

[options.entry_points]
console_scripts = cipherkit = cipherkit.cli:main

[options.extras_require]
dev =
    black ; python_version>='3.6'
    coverage
    ipykernel
    ipython>=5.0
    ipywidgets>=7.0
    isort
    jupyter-client
    nbsphinx
    pycodestyle
    pytest-cov<2.6.0
    pytest>=3.2
    sphinx
    sphinx_rtd_theme>=0.4.3

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = cipherkit
default_section = THIRDPARTY
forced_separate = test_cipherkit
not_skip = __init__.py
skip = migrations

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
    __init__
